[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "metarace"
version = "2.0.2"
description = "Cyclesport results and timing toolkit"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
keywords = ["cyclesport", "results", "timing"]
authors = [
    {email = "ndf-zz@6-v.org", name = "Nathan Fraser"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Other/Nonlisted Topic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "importlib-resources",
    "pyserial",
    "python-dateutil",
    "pycairo",
    "PyGObject",
    "libscrc",
    "paho-mqtt",
    "xlwt",
]

[project.urls]
homepage = "https://github.com/ndf-zz/metarace"
