[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metarace"
version = "2.1.13"
description = "Cyclesport results and timing toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cyclesport", "results", "timing"]
authors = [
    {email = "ndf-zz@6-v.org", name = "Nathan Fraser"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Other/Nonlisted Topic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyserial",
    "python-dateutil>=2.9",
    "pycairo",
    "PyGObject",
    "paho-mqtt>=2.1",
    "xlsxwriter",
    "graphemeu",
]

[project.urls]
homepage = "https://github.com/ndf-zz/metarace"
